--- a/css/styles.css
+++ b/css/styles.css
@@ -18,15 +18,15 @@
   --dark-border: #000;
   --font-poppins: "Poppins", sans-serif;
   --fade-dark: #344563;
-  --text-blue: #6070FF;
-}
-
-.text-blue {
-  color: #6070FF !important;
+  --text-blue: #6070ff;
 }
 
 body {
-  font-family: var(--font-poppins); 
+  font-family: var(--font-poppins);
+}
+
+.text-blue {
+  color: var(--text-blue) !important;
 }
 
 .logo {
@@ -50,9 +50,9 @@ ul {
   height: 8px;
   width: 8px;
   border-radius: 100%;
-  background: #C1C7D0;
+  background: #c1c7d0;
 }
 
 .badge {
-  color: var(--text-blue)
+  color: var(--text-blue);
 }
